	with restricted definition domains like "/", "^"; it turned our that our idea to catch errors
	in this deparsing within a try()-catch did not work any longer when called from within a function; 
	as way out, we now have code which no longer needs the try()-catch and instead climbs up the 
	parsing tree and searches for the first occurrence of "/" resp. "^" and deparses this

under the hood:
+ triggered by an email by Santhosh V <Santhosh.V@se.com>, we added a patch to be more careful when producing
  slot q for compound and mixing distributions
+ detected by Vlada Milchevskaya vmilchev@uni-koeln.de:
  CompoundDistribution(): special treatment of case that NumbOfSummandsDistr is a Dirac distribution
  (and detect that for prob in {0,1} Binom(size, prob) is in fact a Dirac distribution)
+ fixed some broken URLs and changed URLs from http to https where possible
  changed rstudio.com to posit.co

##############
v 2.8
##############

user-visible CHANGES:
+ DESCRIPTION tag SVNRevision changed to VCS/SVNRevision
+ plot methods now return an S3 object of class \code{c("plotInfo","DiagnInfo")}, i.e., a list containing the 
  information needed to produce the respective plot, which at a later stage could be used by different graphic engines (like, e.g. 
  \code{ggplot}) to produce the plot in a different framework. A more detailed description will follow in a subsequent version.
+ accessor & replacer for prob, GeomParameter are finally Defunct
+ liesInSupport gains an argument checkFin; in case of DiscreteDistributions, it tries to use 
  additional information from internal slot .finSupport, and e.g. if there is a lattice.  
+ liesInSupport now also is available for UnivarLebDecDistribution, LatticeDistribution, and UnivarMixingDistribution
+ clarified that the Gumbel distribution has been moved to RobExtremes in vignette newDistributions-knitr.Rnw
+ modified devNew(): in interactive mode it now asks the user to shut some devices first when 